--- a/templates/cafes.html
+++ b/templates/cafes.html
@@ -16,9 +16,19 @@
       <h1>All Cafes</h1>
 
 	  <table class="table">
-          <!-- This is where you will write the code to render a Bootstrap 
-          Table that contains all the information from the 
-          cafe-data.csv file. -->
+        {% for cafe in cafes %}
+          <tbody>
+            <tr>
+              {% for item in cafe %}
+              {% if item[0:4] == 'http' %}
+              <td><a href="{{ item }}">Map Link</a></td>
+              {% else %}
+              <td> {{item}} </td>
+              {% endif %}
+              {% endfor %}
+            </tr>
+          </tbody>
+        {% endfor %}
   	  </table>
 
       <p><a href="#">Return to index page</a></p>
